feat: redis and validation test
