# backend/docs/swagger.json
@@ -40,16 +40,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/app.VErr"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/app.ErrResponse"
+                            "$ref": "#/definitions/app.ValidationError"
                         }
                     }
                 }
@@ -74,14 +65,6 @@
         }
     },
     "definitions": {
-        "app.ErrResponse": {
-            "type": "object",
-            "properties": {
-                "msg": {
-                    "type": "string"
-                }
-            }
-        },
         "app.VErr": {
             "type": "object",
             "properties": {
@@ -92,6 +75,20 @@
                     "type": "string"
                 },
                 "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.ValidationError": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/app.VErr"
+                    }
+                },
+                "message": {
                     "type": "string"
                 }
             }
